WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204326
Fix load<16> on ARM64
https://bugs.webkit.org/show_bug.cgi?id=204326
Summary
Fix load<16> on ARM64
Robin Morisset
Reported
2019-11-18 15:24:45 PST
It was introduced in
https://bugs.webkit.org/show_bug.cgi?id=202832
, and Daniel Bates notified me of a bug in it. More precisely, it calls ldr<16>, which calls CHECK_DATASIZE which in turns does an ASSERT(16 == 32 || 16 == 64); I am still trying to see if I can just remove the assert (which looks plain wrong), or if there is a more serious problem here. <
rdar://problem/57297184
> REGRESSION (
r252422
) CHECK_DATASIZE() fails loading docs.google.com
Attachments
Patch
(1.73 KB, patch)
2019-11-18 16:13 PST
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2019-11-18 16:21 PST
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
Patch
(1.77 KB, patch)
2019-11-18 16:29 PST
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Robin Morisset
Comment 1
2019-11-18 16:13:18 PST
Created
attachment 383802
[details]
Patch
Robin Morisset
Comment 2
2019-11-18 16:21:36 PST
Created
attachment 383803
[details]
Patch
Robin Morisset
Comment 3
2019-11-18 16:29:38 PST
Created
attachment 383805
[details]
Patch
Mark Lam
Comment 4
2019-11-18 16:46:13 PST
Comment on
attachment 383805
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2019-11-20 12:06:59 PST
Comment on
attachment 383805
[details]
Patch Clearing flags on attachment: 383805 Committed
r252699
: <
https://trac.webkit.org/changeset/252699
>
WebKit Commit Bot
Comment 6
2019-11-20 12:07:01 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-11-20 12:07:21 PST
<
rdar://problem/57368165
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug