Fix load<16> on ARM64 https://bugs.webkit.org/show_bug.cgi?id=204326

Reviewed by Mark Lam.

On ARM64 I used load<16> in https://bugs.webkit.org/show_bug.cgi?id=202832.
Unfortunately it turns out to call ldr<16>, and ldr<n> asserts that n is either 32 or 64.
This fix simply calls ldrh/strh directly.

* assembler/MacroAssemblerARM64.h:
(JSC::MacroAssemblerARM64::load16):
(JSC::MacroAssemblerARM64::store16):


Canonical link: https://commits.webkit.org/217682@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252699 268f45cc-cd09-0410-ab3c-d52691b4dbfc